Había olvidado subir el Makefile del codificador

--- a/src/cpp/Makefile
+++ b/src/cpp/Makefile
@@ -1,5 +1,5 @@
 .PHONY: all
-all: tp1
+all: tp1 codificarParticipantes
 
 tp1: tp1.o partido.o winPercentage.o colleyMatrix.o ratingIndex.o
 	g++ -Wall $^ -o $@
@@ -19,7 +19,14 @@ colleyMatrix.o: colleyMatrix.cpp colleyMatrix.h partido.cpp
 ratingIndex.o: ratingIndex.cpp ratingIndex.h partido.cpp
 	g++ -c -Wall $< -o $@
 
+codificarParticipantes: codificarParticipantes.o partido.o
+	g++ -Wall $^ -o $@
+
+codificarParticipantes.o: codificarParticipantes.cpp
+	g++ -c -Wall $< -o $@
+
 .PHONY: clean
 clean:
 	rm -f *.o
 	rm -f tp1
+	rm -f codificarParticipantes
